Ensure migrations are run in the test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,10 @@ jobs:
     - name: Run tests
       run: |
         uv run manage.py test wagtail_unveil
+
+    - name: Run migrations
+      run: |
+        uv run manage.py migrate
         
     - name: Run list_admin_urls (default)
       run: |
