Experiment with tox

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
-
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+    
     steps:
     - uses: actions/checkout@v4
     
@@ -24,13 +24,32 @@ jobs:
         enable-cache: true
         cache-dependency-glob: "uv.lock"
     
-    - name: Install the project
+    - name: Install tox and tox-gh-actions
+      run: |
+        uv pip install tox tox-uv tox-gh-actions
+    
+    - name: Run tox
+      # tox-gh-actions will automatically select the correct environment based on the Python version
+      run: |
+        tox
+
+  cli-test:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        python-version: '3.12'  # Use latest stable Python version for CLI tests
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
+    
+    - name: Install the project for CLI testing
       run: |
         uv sync --locked --all-extras --dev
-    
-    - name: Run tests
-      run: |
-        uv run manage.py test wagtail_unveil
 
     - name: Run migrations
       run: |
