Adjust tox and testing matrix and cover python 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,55 @@
 minversion = 4.0
 # Only include compatible version combinations
 envlist = 
-    # Python 3.10, 3.11, 3.12 compatible with Django 4.2 and Wagtail 5.2, 6.0-6.4
-    py{310,311,312}-django42-wagtail{52,60,61,62,63,64}
-    # Python 3.10, 3.11, 3.12, 3.13 compatible with Django 5.1 and Wagtail 6.3, 6.4
-    py{310,311,312,313}-django51-wagtail{63,64}
-    # Python 3.10, 3.11, 3.12, 3.13 compatible with Django 5.2 and Wagtail 6.4
-    py{310,311,312,313}-django52-wagtail64
+    # ========================================================
+    # Wagtail 5.2
+    # --------------------------------------------------------
+    # Compatible with:
+    # - Django 4.2
+    # - Python 3.9, 3.10, 3.11, 3.12
+    # ========================================================
+    wt52-dj42-py{39,310,311,312}
+    
+    # ========================================================
+    # Wagtail 6.0, 6.1, 6.2
+    # --------------------------------------------------------
+    # Compatible with:
+    # - Django 4.2
+    # - Python 3.9, 3.10, 3.11, 3.12
+    # ========================================================
+    wt{60,61,62}-dj42-py{39,310,311,312}
+    
+    # ========================================================
+    # Wagtail 6.3
+    # --------------------------------------------------------
+    # Compatible with:
+    # - Django 4.2
+    #   - Python 3.9, 3.10, 3.11, 3.12
+    # - Django 5.1
+    #   - Python 3.10, 3.11, 3.12, 3.13
+    # ========================================================
+    wt63-dj42-py{39,310,311,312}
+    wt63-dj51-py{310,311,312,313}
+    
+    # ========================================================
+    # Wagtail 6.4
+    # --------------------------------------------------------
+    # Compatible with:
+    # - Django 4.2
+    #   - Python 3.9, 3.10, 3.11, 3.12
+    # - Django 5.1
+    #   - Python 3.10, 3.11, 3.12, 3.13
+    # - Django 5.2
+    #   - Python 3.10, 3.11, 3.12, 3.13
+    # ========================================================
+    wt64-dj42-py{39,310,311,312}
+    wt64-dj51-py{310,311,312,313}
+    wt64-dj52-py{310,311,312,313}
 isolated_build = True
 
 [gh-actions]
 python =
+    3.9: py39
     3.10: py310
     3.11: py311
     3.12: py312
@@ -28,15 +67,15 @@ install_command = uv pip install {opts} {packages}
 commands_pre = 
     uv pip freeze
 deps =
-    django42: Django>=4.2,<5.0
-    django51: Django>=5.1,<5.2
-    django52: Django>=5.2,<5.3
-    wagtail52: wagtail>=5.2,<5.3
-    wagtail60: wagtail>=6.0,<6.1
-    wagtail61: wagtail>=6.1,<6.2
-    wagtail62: wagtail>=6.2,<6.3
-    wagtail63: wagtail>=6.3,<6.4
-    wagtail64: wagtail>=6.4,<6.5
+    dj42: Django>=4.2,<5.0
+    dj51: Django>=5.1,<5.2
+    dj52: Django>=5.2,<5.3
+    wt52: wagtail>=5.2,<5.3
+    wt60: wagtail>=6.0,<6.1
+    wt61: wagtail>=6.1,<6.2
+    wt62: wagtail>=6.2,<6.3
+    wt63: wagtail>=6.3,<6.4
+    wt64: wagtail>=6.4,<6.5
     wagtail-modeladmin>=2.1.0
 setenv =
     PYTHONPATH = {toxinidir}
