Clearer tox config

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,13 @@ envlist =
     wt64-dj42-py{39,310,311,312}
     wt64-dj51-py{310,311,312,313}
     wt64-dj52-py{310,311,312,313}
+    
+    # ========================================================
+    # Latest development versions
+    # --------------------------------------------------------
+    # Main branches of Wagtail and Django with Python 3.13
+    # ========================================================
+    wtmain-djmain-py313
 isolated_build = True
 
 [gh-actions]
@@ -64,18 +71,21 @@ basepython = python3
 # Use uv as the installer
 installer = uv
 install_command = uv pip install {opts} {packages}
+allowlist_externals = uv
 commands_pre = 
     uv pip freeze
 deps =
     dj42: Django>=4.2,<5.0
     dj51: Django>=5.1,<5.2
     dj52: Django>=5.2,<5.3
+    djmain: git+https://github.com/django/django.git@main#egg=Django
     wt52: wagtail>=5.2,<5.3
     wt60: wagtail>=6.0,<6.1
     wt61: wagtail>=6.1,<6.2
     wt62: wagtail>=6.2,<6.3
     wt63: wagtail>=6.3,<6.4
     wt64: wagtail>=6.4,<6.5
+    wtmain: git+https://github.com/wagtail/wagtail.git@main#egg=wagtail
     wagtail-modeladmin>=2.1.0
 setenv =
     PYTHONPATH = {toxinidir}
