Allow to fail wtmain-djmain-py313

--- a/tox.ini
+++ b/tox.ini
@@ -46,14 +46,21 @@ envlist =
     wt64-dj42-py{39,310,311,312}
     wt64-dj51-py{310,311,312,313}
     wt64-dj52-py{310,311,312,313}
-    
+isolated_build = True
+
+# CI-only environments - these will only run in CI
+[testenv:ci]
+envlist =
     # ========================================================
     # Latest development versions
     # --------------------------------------------------------
     # Main branches of Wagtail and Django with Python 3.13
     # ========================================================
     wtmain-djmain-py313
-isolated_build = True
+
+# Allow the development versions to fail without failing the build
+[testenv:wtmain-djmain-py313]
+ignore_outcome = True
 
 [gh-actions]
 python =
