--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  test:
+  python-matrix-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,9 +33,9 @@ jobs:
       run: |
         tox
 
-  ci-env-test:
+  dev-branch-test:
     runs-on: ubuntu-latest
-    needs: test
+    needs: python-matrix-tests
     
     steps:
     - uses: actions/checkout@v4
@@ -56,9 +56,9 @@ jobs:
         tox -e wtmain-djmain-py313
       continue-on-error: true  # Allow failure as per tox configuration
 
-  cli-test:
+  management-command-test:
     runs-on: ubuntu-latest
-    needs: test
+    needs: python-matrix-tests
     
     steps:
     - uses: actions/checkout@v4
